Only get Feed and Delete All Shorts not working